# backend_chatbot

./: README.md  hello.py  pyproject.toml
app/: .env  config.py  main.py  pyproject.toml  questionnaires.py  requirements.txt  setup.py
app/api/: chat.py  documents.py  pdf.py  router.py
app/core/: logging.py  openai_service.py
app/data/: CUESTIONARIO COMPLETO (2).docx  assistant_instructions.txt  format_proposal.docx  format_proposal.txt  hydrous_instructions.txt  questionnaire-json-complete-1.json  questionnaire-json-complete-2.json  questionnaire-json-complete-3.json  questionnaire-json-complete-4.json  questionnaire-json-complete-5.json  questionnaire-json-complete-6.json  questionnaire.json  questionnaire_complete.json  script.py
app/models/: analytics.py  chat.py  conversation.py  conversation_state.py  feedback.py  message.py  questionnaire_state.py  schemas.py  user.py
app/prompts/: Format Proposal.txt  PROMPT.md  cuestionario.json  cuestionario.txt  cuestionario_completo.txt  hydrous_instructions.txt  main_prompt.py  main_prompt_llm_driven.py  master_prompt.py  questionnaire_complete.json
app/routes/: analytics.py  auth.py  chat.py  documents.py  feedback.py  pdf_download.py
app/services/: ai_service.py  analytics_improved.py  auth_service.py  cuestionario.json  direct_proposal_generator.py  direct_proposal_generatoy.py  document_service.py  enhanced_pdf_service.py  feedback_service.py  flow_service.py  new_proposal_service.py  openai_service.py  pdf_service.py  proposal_generator.py  proposal_service.py  questionnaire_data.py  responses_service.py  (+3 more)
(+13 files in other folders)
